2009-05-06 Harri Pitkänen <hatapitk@iki.fi>

	* Some refactoring of spelling suggestion code.
	* Add project files for Qt Creator.

2009-04-26 Harri Pitkänen <hatapitk@iki.fi>

	* Disable character case checks completely within quotations.
	* Fix suggestions for punctuation at the end of quotes.

2009-04-25 Harri Pitkänen <hatapitk@iki.fi>

	* Accept different types of quote characters.
	* Accept single letters written in uppercase.
	* Accept Finnish dates without year.
	* Hyphen at the start of a paragraph may mean that the paragraph
	  is a list item.

2009-04-17 Lauri Nurmi <lanurmi@iki.fi>

	* Add "#error" if no charset conversion implementation
	  is available.

2009-04-17 Harri Pitkänen <hatapitk@iki.fi>

	* valgrind: Fix invalid use of delete vs. delete[].
	* cppcheck: Limit the scope of some variables.

2009-04-11 Harri Pitkänen <hatapitk@iki.fi>

	* Remove --as-needed from linker flags. It is
	  unnecessary as long as libtool < 2.0 is used
	  and breaks build on OS X.

2009-04-10 Harri Pitkänen <hatapitk@iki.fi>

	* Fixed typo that prevented dictionary loader from
	  working correctly on Windows.
	* Add struct keywords to voikko.h to make the header
	  compatible with plain C compilers.
	* Fix memory leak in grammar checker.

2009-04-07 Harri Pitkänen <hatapitk@iki.fi>

	* Change trie compiler to not use a construct that
	  is not supported in python 2.3.

2009-07-05 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Build fixes for Fedora 11.

2009-04-05 Harri Pitkänen <hatapitk@iki.fi>

	* Improved handling of soft hyphen in grammar checker.

2009-04-04 Harri Pitkänen <hatapitk@iki.fi>

	* Configure updates for libtool version 2.
	* Improved handling of quotations in grammar checker.

2009-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC.
	* Disable character case checks if sentence contains a tab
	  character.
	* Disable checks for paragraphs that contain only an URL or
	  some other non-standard text.
